--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,14 +1,15 @@
 .card{
 width: 600px ;
 margin:  0 2rem;
-height: 600px;
-padding: 20px;
+height: 700px;
+padding: 0;
+background-color: whitesmoke;
 }
 
 
-.card-img-top{
-    height: 300px;
-    width: 330px;
+.card-img{
+    height: 450px;
+    width: 361px;
     position: center;
 }
 .card-title{
